--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,21 @@
 version: "3.3"
 
 services:
-
   api:
     build:
       context: .
     image: moleculer
     env_file: docker-compose.env
     environment:
-      SERVICES: api
       PORT: 3000
     depends_on:
       - nats
+    ports:
+      - 9000:3000
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api-gw.rule=PathPrefix(`/`)"
       - "traefik.http.services.api-gw.loadbalancer.server.port=3000"
-    networks:
-      - internal
-
-  greeter:
-    build:
-      context: .
-    image: moleculer
-    env_file: docker-compose.env
-    environment:
-      SERVICES: greeter
-    depends_on:
-      - nats
-    networks:
-      - internal
-
-  products:
-    build:
-      context: .
-    image: moleculer
-    env_file: docker-compose.env
-    environment:
-      SERVICES: products
-    depends_on:
-      - mongo
-      - nats
     networks:
       - internal
 
