--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,23 @@ version: "3.3"
 
 services:
   api:
-    build:
-      context: .
-    image: moleculer
-    env_file: docker-compose.env
+    image: node:18.0.0
+    env_file:
+      - .env
     environment:
-      PORT: 3000
+      - PORT=3000
+      - MONGO_URI=mongodb://mongo:27017/jobmatch
+    links:
+      - mongo
     depends_on:
       - nats
+      - mongo
     ports:
       - 9000:3000
+    volumes:
+      - .:/app
+    working_dir: /app
+    entrypoint: sh -c "npm i && npm run dev"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api-gw.rule=PathPrefix(`/`)"
@@ -21,6 +28,8 @@ services:
 
   mongo:
     image: mongo:4
+    ports:
+      - 27017
     volumes:
       - data:/data/db
     networks:
