--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
       - .:/app
     working_dir: /app
     entrypoint: sh -c "npm i && npm run dev"
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api-gw.rule=PathPrefix(`/api`) && Host(`localhost`)"
-      - "traefik.http.services.api-gw.loadbalancer.server.port=3000"
+    # labels:
+    #   - "traefik.enable=true"
+    #   - "traefik.http.routers.api-gw.rule=PathPrefix(`/api`) && Host(`localhost`)"
+    #   - "traefik.http.services.api-gw.loadbalancer.server.port=3000"
     networks:
       - internal
 
@@ -38,22 +38,22 @@ services:
     networks:
       - internal
 
-  traefik:
-    image: traefik:v2.4
-    command:
-      - --providers.docker
-      - --providers.docker.exposedbydefault=false
-      - --entrypoints.web.address=:80
-      - --api.insecure=true # Enable insecure API access
-      - --log.level=DEBUG
-    ports:
-      - 80:80
-      - 8080:8080
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    networks:
-      - internal
-      - default
+  # traefik:
+  #   image: traefik:v2.4
+  #   command:
+  #     - --providers.docker
+  #     - --providers.docker.exposedbydefault=false
+  #     - --entrypoints.web.address=:80
+  #     - --api.insecure=true # Enable insecure API access
+  #     - --log.level=DEBUG
+  #   ports:
+  #     - 80:80
+  #     - 8080:8080
+  #   volumes:
+  #     - /var/run/docker.sock:/var/run/docker.sock:ro
+  #   networks:
+  #     - internal
+  #     - default
 
 networks:
   internal:
